--- a/Ratatouille_Project/app/src/main/res/layout/activity_add_rat.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_add_rat.xml
@@ -5,13 +5,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+   <!-- <Button
+        android:id="@+id/pickDate"
+        android:text="Set Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"/>-->
+
     <EditText
         android:id="@+id/editTxt_created_date"
-        android:hint="@string/DateCreated"
-        android:inputType="date"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        style="@style/EditTextStyle" />
+        android:hint="Date"
+        style="@style/EditTextStyle"
+        android:layout_marginTop="12dp"/>
 
     <EditText
         android:id="@+id/editTxt_loc_type"
@@ -19,9 +25,7 @@
         android:inputType="text"
         android:layout_marginTop="12dp"
         style="@style/EditTextStyle"
-        android:layout_below="@+id/editTxt_created_date"
-        android:layout_alignLeft="@+id/editTxt_created_date"
-        android:layout_alignStart="@+id/editTxt_created_date" />
+        android:layout_below="@+id/editTxt_created_date" />
 
     <EditText
         android:id="@+id/editTxt_incident_zip"
@@ -29,9 +33,7 @@
         android:inputType="text"
         android:layout_marginTop="12dp"
         style="@style/EditTextStyle"
-        android:layout_below="@+id/editTxt_loc_type"
-        android:layout_alignLeft="@+id/editTxt_city"
-        android:layout_alignStart="@+id/editTxt_city" />
+        android:layout_below="@+id/editTxt_loc_type" />
 
     <EditText
         android:id="@+id/editTxt_incident_address"
@@ -39,9 +41,7 @@
         android:inputType="text"
         android:layout_marginTop="12dp"
         style="@style/EditTextStyle"
-        android:layout_below="@+id/editTxt_incident_zip"
-        android:layout_alignLeft="@+id/editTxt_city"
-        android:layout_alignStart="@+id/editTxt_city" />
+        android:layout_below="@+id/editTxt_incident_zip" />
 
     <EditText
         android:id="@+id/editTxt_city"
@@ -49,8 +49,6 @@
         android:inputType="text"
         style="@style/EditTextStyle"
         android:layout_below="@+id/editTxt_incident_address"
-        android:layout_alignLeft="@+id/editTxt_borough"
-        android:layout_alignStart="@+id/editTxt_borough"
         android:layout_marginTop="12dp" />
 
     <EditText
@@ -69,9 +67,7 @@
         android:inputType="text"
         style="@style/EditTextStyle"
         android:layout_marginTop="12dp"
-        android:layout_below="@+id/editTxt_longitude"
-        android:layout_alignLeft="@+id/editTxt_longitude"
-        android:layout_alignStart="@+id/editTxt_longitude" />
+        android:layout_below="@+id/editTxt_longitude" />
 
     <EditText
         android:id="@+id/editTxt_longitude"
