--- a/Ratatouille_Project/app/src/main/res/layout/activity_rat_list.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_rat_list.xml
@@ -34,11 +34,53 @@
             app:borderWidth="0dp"
             app:elevation="2dp"/>
 
+        <EditText
+            android:id="@+id/editTxt_startDate"
+            android:hint="@string/StartDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|end"
+            app:layout_anchor="@+id/rat_recycler_view"
+            app:layout_anchorGravity="bottom|left|end"
+            android:inputType="date"
+            android:layout_below="@+id/editTxt_startDate"
+            android:layout_marginTop="160dp"
+            style="@style/EditTextStyle"/>
+
+        <EditText
+            android:id="@+id/editTxt_endDate"
+            android:hint="@string/EndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom"
+            app:layout_anchor="@+id/rat_recycler_view"
+            app:layout_anchorGravity="bottom|center"
+            android:inputType="date"
+            android:layout_below="@+id/editTxt_endDate"
+            android:layout_marginTop="160dp"
+            style="@style/EditTextStyle"/>
+
+        <Button
+            android:id="@+id/btn_submitDate"
+            android:text="@string/Submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_gravity="bottom|end"
+            app:layout_anchor="@+id/rat_recycler_view"
+            app:layout_anchorGravity="bottom"
+            android:layout_below="@+id/editTxt_logPassword"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="240dp"
+            android:typeface="monospace"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rat_recycler_view"
-            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
 
     </android.support.design.widget.CoordinatorLayout>
 
