--- a/Ratatouille_Project/app/src/main/res/layout/activity_graph.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_graph.xml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:map="http://schemas.android.com/tools"
+android:orientation="vertical"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/map_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    android:layout_above="@+id/bottom_navigation_maps">
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
         android:id="@+id/graph" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_graph"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_gravity="top|right"/>
+
+    <Button
+        android:id="@+id/map_filter"
+        android:text="@string/filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@+id/btn_addRat_maps"
+        app:layout_anchorGravity="bottom"
+        android:layout_margin="16dp"
+        android:typeface="monospace"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_addRat_maps"
+        android:src="@drawable/ic_add_black_24dp"
+        app:fabSize="mini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"
+        android:backgroundTint="@color/black"
+        android:tint="@color/white"
+        app:borderWidth="0dp"
+        app:elevation="2dp"/>
+
+</android.support.design.widget.CoordinatorLayout>
+
+<android.support.design.widget.BottomNavigationView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/bottom_navigation_maps"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="start"
+    android:layout_alignParentBottom="true"
+    app:menu="@menu/bottom_navigation_items"
+    app:itemBackground="@color/gray"
+    app:itemTextColor="@color/black"
+    app:itemIconTint="@color/black"/>
 
 </RelativeLayout>
 
