--- a/Ratatouille_Project/app/src/main/res/layout/activity_graph.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_graph.xml
@@ -1,72 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:map="http://schemas.android.com/tools"
-android:orientation="vertical"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/map_coordinator"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:layout_above="@+id/bottom_navigation_maps">
-
-    <com.jjoe64.graphview.GraphView
-        android:layout_width="match_parent"
-        android:layout_height="200dip"
-        android:id="@+id/graph" />
-
-    <!--<ProgressBar
-        android:id="@+id/progressBar_graph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="top|right"/>-->
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/graph_filter"
-        android:src="@drawable/ic_search_black_24dp"
-        app:fabSize="mini"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:paddingBottom="16dp"
-        android:layout_gravity="top|end"
-        android:backgroundTint="@color/black"
-        android:tint="@color/white"
-        app:borderWidth="0dp"
-        app:elevation="2dp"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/graph_add"
-        android:src="@drawable/ic_add_black_24dp"
-        app:fabSize="mini"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="bottom|end"
-        android:backgroundTint="@color/black"
-        android:tint="@color/white"
-        app:borderWidth="0dp"
-        app:elevation="2dp"/>
-
-</android.support.design.widget.CoordinatorLayout>
-
-<android.support.design.widget.BottomNavigationView
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottom_navigation_graph"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="start"
-    android:layout_alignParentBottom="true"
-    app:menu="@menu/bottom_navigation_items"
-    app:itemBackground="@color/gray"
-    app:itemTextColor="@color/black"
-    app:itemIconTint="@color/black"/>
+    android:layout_height="match_parent">
+
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/graph_coordinator"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_above="@+id/bottom_navigation_graph">
+
+        <!--<ProgressBar
+            android:id="@+id/progressBar_maps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="top|right"/>-->
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/graph_filter"
+            android:src="@drawable/ic_search_black_24dp"
+            app:fabSize="mini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:paddingBottom="16dp"
+            android:layout_gravity="top|end"
+            android:backgroundTint="@color/black"
+            android:tint="@color/white"
+            app:borderWidth="0dp"
+            app:elevation="2dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/graph_add"
+            android:src="@drawable/ic_add_black_24dp"
+            app:fabSize="mini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|end"
+            android:backgroundTint="@color/black"
+            android:tint="@color/white"
+            app:borderWidth="0dp"
+            app:elevation="2dp"/>
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true">
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph_day"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            android:gravity="center_horizontal"/>
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph_month"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="16dp"/>
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph_year"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="16dp"/>
+    </LinearLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/bottom_navigation_graph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation_items"
+        app:itemBackground="@color/gray"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"/>
 
 </RelativeLayout>
-
