--- a/Ratatouille_Project/app/src/main/res/layout/activity_filter.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_filter.xml
@@ -26,9 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="date"
-            android:layout_toRightOf="@+id/text_from"
-            android:layout_centerInParent="false"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             style="@style/EditTextStyle"/>
 
         <TextView
@@ -36,8 +34,7 @@
             android:text="@string/to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@+id/filter_startDate"/>
+            android:layout_marginStart="8dp" />
 
         <EditText
             android:id="@+id/filter_endDate"
@@ -45,9 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="date"
-            android:layout_toRightOf="@+id/text_to"
-            android:layout_centerInParent="false"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             style="@style/EditTextStyle"/>
     </LinearLayout>
 
@@ -75,8 +70,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@id/text_sort">
+            android:layout_marginStart="5dp">
 
             <RadioButton
                 android:id="@+id/radioBtn_desc"
